--- a/repository.yaml
+++ b/repository.yaml
@@ -1,4 +1,4 @@
 ---
-name: Addons by t0bst4r
+name: Addons by tsprenk
 url: https://github.com/t0bst4r/home-assistant-addons
 maintainer: Tobias Glatthar
