--- a/repository.yaml
+++ b/repository.yaml
@@ -1,4 +1,4 @@
 ---
 name: Addons by tsprenk
-url: https://github.com/t0bst4r/home-assistant-addons
-maintainer: Tobias Glatthar
+url: https://github.com/tsprenk/home-assistant-addons
+maintainer: tsprenk
